# kmc-rs

./: .gitmodules  .travis.yml  Cargo.toml  LICENSE.md  README.md  build.rs
data/: test1.fasta  test1.kmc_pre  test1.kmc_suf  test_pyapi.py
src/: cxxbridge.cc  cxxbridge.rs  kmc_file.cc  kmc_file.h  kmc_file.hh  kmc_rust.cc  kmc_rust.hh  lib.rs  main.rs
tests/: .gitignore  bitstring.hh  makefile  test_api.cc  test_pyapi.py
